# momo_db

./: Cargo.toml  README  build.sh
discord/: compressedmimi.json  compressedmimo.json  compressedmomo.json  mimibot.py  momobot.py
resnetcat/: .gitignore  catfetcher.py  catpredictor.py  ignore.txt  traincat.py
scripts/: compress.py
sql/: create_momo.sql  momo_update_2_11_2018.sql
src/: main.rs
