[package]
name = "momo_wallet"
version = "0.1.0"
authors = ["km42 <kurtmueller42@gmail.com>"]

[dependencies]
serde_json = "1.0"
num = "*"
rand = "*"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres.git"
