[package]
name = "momo_wallet"
version = "0.1.0"
authors = ["km42 <kurtmueller42@gmail.com>"]

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
num = "*"
rand = "*"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]